Makefile instructions added

--- a/src/Main.tex
+++ b/src/Main.tex
@@ -1,3 +1,5 @@
+% !TEX root = ../src/Main.tex
+
 \documentclass[a4paper,12pt,oneside]{article}
 
 % Inclusión de la configuración
@@ -24,6 +26,6 @@
 \newpage
 
 % Inclusión de secciones
-\include{sections/Food}
+\input{sections/Food}
 
 \end{document}
