--- a/src/Preamble.tex
+++ b/src/Preamble.tex
@@ -16,8 +16,10 @@
 \fancyfoot[C]{\thepage}
 
 % Cabecera
-\fancyhead[LE]{\leftmark}         % Sección en páginas pares
+\fancyhead[L]{\leftmark}         % Sección en páginas pares
 \fancyhead[RO]{Vocabulary Annex}  % Título en impares
+\setlength{\headheight}{15.5pt}
+\addtolength{\topmargin}{-2.5pt}
 
 % Para el control de colores
 \usepackage{xcolor}
