Diamic basic table generator implemented

--- a/src/Preamble.tex
+++ b/src/Preamble.tex
@@ -4,6 +4,7 @@
 \usepackage[english,spanish]{babel}
 \usepackage{lmodern}
 
+
 % Márgenes y tamaño
 \usepackage[a4paper,margin=2.5cm]{geometry}
 
@@ -36,3 +37,6 @@
 
 % Numeración continua
 \setcounter{page}{1}
+
+\usepackage{float} % Para [H] en tablas
+\input{tables/table_concepts}
