--- a/src/sections/Food.tex
+++ b/src/sections/Food.tex
@@ -1,8 +1,5 @@
 \section{Food}
 
-\begin{itemize}
-    \item \esp{Manzana} – \eng{Apple}
-    \item \esp{Pan} – \eng{Bread}
-    \item \esp{Queso} – \eng{Cheese}
-    \item \esp{Carne} – \eng{Meat}
-\end{itemize}
+%\addcontentsline{toc}{section}{Food}
+
+\PrintTableConcepts{data/data_food}
