Table_concepts adapted to aplicate different langguaje styles

--- a/src/Main.tex
+++ b/src/Main.tex
@@ -3,18 +3,13 @@
 \documentclass[a4paper,12pt,oneside]{article}
 
 % Inclusión de la configuración
-\input{Preamble}
+\input{aux/Preamble}
 
 \begin{document}
 \selectlanguage{english}
 
 % Portada
-\begin{titlepage}
-    \centering
-    \vspace*{4cm}
-    {\Huge\bfseries Vocabulary Annex\par}
-    \vfill
-\end{titlepage}
+\input{aux/Cover.tex}
 
 % Página en blanco
 \newpage
