--- a/src/data/Data_Food.tex
+++ b/src/data/Data_Food.tex
@@ -1,5 +1,5 @@
-Apple & Manzana \\
-Bread & Pan \\
-Cheese & Queso \\
-Fish & Pescado \\
-Milk & Leche
+\newVocabularyConcept{Apple}{Noun}{Manzana}
+\newVocabularyConcept{Pear}{Noun}{Pera}
+\newVocabularyConcept{To cook}{Verb}{Cocinar}
+\newVocabularyConcept{Bread}{Noun}{Pan}
+\newVocabularyConcept{Delicious}{Adjective}{Delicioso}
