--- a/src/aux/Preamble.tex
+++ b/src/aux/Preamble.tex
@@ -4,20 +4,16 @@
 \usepackage[english,spanish]{babel}
 \usepackage{lmodern}
 
-
 % Márgenes y tamaño
 \usepackage[a4paper,margin=2.5cm]{geometry}
 
-% Cabecera y pie de página
+% Cabecera y Pie de página
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\fancyhf{} % Limpia los encabezados/pies
+\fancyhf{}                        % Limpia los encabezados/pies
+\fancyfoot[C]{\thepage}           % Numeración en pie de página
 
-% Numeración en pie de página
-\fancyfoot[C]{\thepage}
-
-% Cabecera
-\fancyhead[L]{\leftmark}         % Sección en páginas pares
+\fancyhead[L]{\leftmark}          % Sección en páginas pares
 \fancyhead[RO]{Vocabulary Annex}  % Título en impares
 \setlength{\headheight}{15.5pt}
 \addtolength{\topmargin}{-2.5pt}
@@ -25,18 +21,22 @@
 % Para el control de colores
 \usepackage{xcolor}
 
-% Comandos personalizados
-\newcommand{\esp}[1]{\textcolor{black}{#1}}
-\newcommand{\eng}[1]{\textcolor{green!50!black}{#1}}
 
 % Separación de secciones
 \usepackage{titlesec}
 \titleformat{\section}
-  {\normalfont\Large\bfseries}
-  {\thesection}{1em}{}
+{\normalfont\Large\bfseries}
+{\thesection}{1em}{}
 
 % Numeración continua
 \setcounter{page}{1}
 
 \usepackage{float} % Para [H] en tablas
 \input{tables/table_concepts}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Comandos personalizados
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newcommand{\eng}[1]{\textcolor{black}{#1}}
+\newcommand{\esp}[1]{\textcolor{green!60!black}{#1}}
