--- a/src/tables/Table_Concepts.tex
+++ b/src/tables/Table_Concepts.tex
@@ -1,14 +1,28 @@
-\newcommand{\PrintTableConcepts}[1]{
+% tables/table_concepts.tex
 
-  \begin{table}[H]
-    \centering
-    \renewcommand{\arraystretch}{1.2}
-    \begin{tabular}{|p{0.45\linewidth}|p{0.45\linewidth}|}
+% Redefine la macro que usaremos para introducir vocabulario.
+% Esta definición NO imprime nada directamente cuando se llama desde data_food
+\newcommand{\newVocabularyConcept}[3]{%
+  \VocabularyEntry{#1}{#2}{#3}%
+}
+
+% Aquí definimos cómo debe imprimirse cada fila
+\newcommand{\VocabularyEntry}[3]{%
+  \eng{#1} & \textit{#2} & \esp{#3} \\
+  \hline
+}
+
+% Esta macro imprime la tabla y carga los datos definidos
+\newcommand{\PrintTableConcepts}[1]{%
+  \begingroup
+  \renewcommand{\arraystretch}{1.3}
+  \begin{center}
+    \begin{tabular}{|p{0.3\textwidth}|p{0.2\textwidth}|p{0.4\textwidth}|}
       \hline
-      \textbf{English} & \textbf{Español} \\
+      \textbf{English} & \textbf{Type} & \textbf{Spanish} \\
       \hline
-      \input{#1} \\ \hline
+      \input{#1}
     \end{tabular}
-  \end{table}
-
-  }
+  \end{center}
+  \endgroup
+}
