tables changes to longtables and multiple titles row added

--- a/src/aux/Preamble.tex
+++ b/src/aux/Preamble.tex
@@ -20,6 +20,8 @@
 
 % Para el control de colores
 \usepackage{xcolor}
+\definecolor{lightgray}{gray}{0.9}
+\definecolor{Color_TitleTableBackground}{gray}{0.1}
 
 
 % Separación de secciones
@@ -27,6 +29,9 @@
 \titleformat{\section}
 {\normalfont\Large\bfseries}
 {\thesection}{1em}{}
+
+% Para el uso de tablas largas 
+\usepackage{longtable}
 
 % Numeración continua
 \setcounter{page}{1}
