--- a/src/sections/Food.tex
+++ b/src/sections/Food.tex
@@ -2,4 +2,5 @@
 
 %\addcontentsline{toc}{section}{Food}
 
-\PrintTableConcepts{data/data_food}
+\subsection{Fruits}
+\PrintTableConcepts{data/dataFood/dataFood_fruits}{Fruits}
