--- a/src/tables/Table_Concepts.tex
+++ b/src/tables/Table_Concepts.tex
@@ -13,16 +13,21 @@
 }
 
 % Esta macro imprime la tabla y carga los datos definidos
-\newcommand{\PrintTableConcepts}[1]{%
+\newcommand{\PrintTableConcepts}[2]{%
   \begingroup
   \renewcommand{\arraystretch}{1.3}
   \begin{center}
-    \begin{tabular}{|p{0.3\textwidth}|p{0.2\textwidth}|p{0.4\textwidth}|}
-      \hline
-      \textbf{English} & \textbf{Type} & \textbf{Spanish} \\
-      \hline
-      \input{#1}
-    \end{tabular}
+    
+    \begin{longtable}{|p{0.42\textwidth}|c|p{0.42\textwidth}|}
+        \hline
+        \multicolumn{3}{|c|}{\textbf{#2}} \\
+        \hline
+        \textbf{English} & \textbf{Type} & \textbf{Spanish} \\
+        \hline
+        \endfirsthead
+        \input{#1}
+    \end{longtable}
+
   \end{center}
   \endgroup
 }
