Added several data files to food vocabulary

--- a/src/aux/Preamble.tex
+++ b/src/aux/Preamble.tex
@@ -19,9 +19,9 @@
 \addtolength{\topmargin}{-2.5pt}
 
 % Para el control de colores
-\usepackage{xcolor}
+\usepackage[table]{xcolor}
 \definecolor{lightgray}{gray}{0.9}
-\definecolor{Color_TitleTableBackground}{gray}{0.1}
+\definecolor{Color_TitleTableBackground}{gray}{0.9}
 
 
 % Separación de secciones
@@ -44,4 +44,5 @@
 % Comandos personalizados
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\eng}[1]{\textcolor{black}{#1}}
+\newcommand{\usa}[1]{\textcolor{blue}{#1}}
 \newcommand{\esp}[1]{\textcolor{green!60!black}{#1}}
