Added extra parameters to Vegetables data file

--- a/src/aux/Preamble.tex
+++ b/src/aux/Preamble.tex
@@ -36,6 +36,10 @@
 % Numeración continua
 \setcounter{page}{1}
 
+% Sentencias condicionales
+\usepackage{ifthen}
+
+
 \usepackage{float} % Para [H] en tablas
 \input{tables/table_concepts}
 
@@ -46,3 +50,5 @@
 \newcommand{\eng}[1]{\textcolor{black}{#1}}
 \newcommand{\usa}[1]{\textcolor{blue}{#1}}
 \newcommand{\esp}[1]{\textcolor{green!60!black}{#1}}
+
+\newcommand{\separator}{\\}
