--- a/src/sections/Food.tex
+++ b/src/sections/Food.tex
@@ -1,11 +1,11 @@
 \section{Food}
 
 \PrintTableConcepts{data/dataFood/dataFood_Vegetable}{Vegetables}
-\PrintTableConcepts{data/dataFood/dataFood_Fruit}{Fruits}
-\PrintTableConcepts{data/dataFood/dataFood_Meat}{Meat}
-\PrintTableConcepts{data/dataFood/dataFood_Fish}{Fishes}
-\PrintTableConcepts{data/dataFood/dataFood_Grain}{Grains}
-\PrintTableConcepts{data/dataFood/dataFood_Spice}{Spices}
-\PrintTableConcepts{data/dataFood/dataFood_Dairy}{Dairy}
-\PrintTableConcepts{data/dataFood/dataFood_Drink}{Drinks}
-\PrintTableConcepts{data/dataFood/dataFood_Dessert}{Desserts}
+%\PrintTableConcepts{data/dataFood/dataFood_Fruit}{Fruits}
+%\PrintTableConcepts{data/dataFood/dataFood_Meat}{Meat}
+%\PrintTableConcepts{data/dataFood/dataFood_Fish}{Fishes}
+%\PrintTableConcepts{data/dataFood/dataFood_Grain}{Grains}
+%\PrintTableConcepts{data/dataFood/dataFood_Spice}{Spices}
+%\PrintTableConcepts{data/dataFood/dataFood_Dairy}{Dairy}
+%\PrintTableConcepts{data/dataFood/dataFood_Drink}{Drinks}
+%\PrintTableConcepts{data/dataFood/dataFood_Dessert}{Desserts}
