New entries into Vegetable table

--- a/src/Main.tex
+++ b/src/Main.tex
@@ -1,6 +1,6 @@
 % !TEX root = ../src/Main.tex
 
-\documentclass[a4paper,12pt,oneside]{article}
+\documentclass[a4paper,11pt,twoside]{article}
 
 % Inclusión de la configuración
 \input{aux/Preamble}
