--- a/src/aux/Preamble.tex
+++ b/src/aux/Preamble.tex
@@ -5,7 +5,7 @@
 \usepackage{lmodern}
 
 % Márgenes y tamaño
-\usepackage[a4paper,margin=2.5cm]{geometry}
+\usepackage[a4paper,inner=2.5cm,outer=1.5cm,top=3cm,bottom=3cm]{geometry}
 
 % Cabecera y Pie de página
 \usepackage{fancyhdr}
