--- a/src/data/dataFood/DataFood_Drink.tex
+++ b/src/data/dataFood/DataFood_Drink.tex
@@ -1,3 +1,4 @@
+% {English therm}                           {US escepcion}  {Type}      {Spanish therm}         {Context}
 \newVocabularyConcept{Water}{Noun}{Agua}
 \newVocabularyConcept{Juice}{Noun}{Zumo}
 \newVocabularyConcept{Milkshake}{Noun}{Batido}
