--- a/src/data/dataFood/DataFood_Vegetable.tex
+++ b/src/data/dataFood/DataFood_Vegetable.tex
@@ -5,35 +5,40 @@
 \newVocabularyConcept{Tomato}               {}              {Noun}      {Tomate}                {}
 \newVocabularyConcept{Cucumber}             {}              {Noun}      {Pepino}                {}
 \newVocabularyConcept{Potato}               {}              {Noun}      {Patata}                {}
+\newVocabularyConcept{Sweet potato}         {}              {Noun}      {Boniato / Batata}      {}
 \newVocabularyConcept{Onion}                {}              {Noun}      {Cebolla}               {}
 \newVocabularyConcept{Spinach}              {}              {Noun}      {Espinaca}              {}
 \newVocabularyConcept{Kale}                 {}              {Noun}      {Berza / Col rizada}    {}
 \newVocabularyConcept{Bell pepper}          {}              {Noun}      {Pimiento morrón}       {}
 \newVocabularyConcept{Chili pepper}         {}              {Noun}      {Guindilla / Chile}     {}
-\newVocabularyConcept{Mushroom}             {}              {Noun}      {Champiñón}             {}
+\newVocabularyConcept{Mushroom}             {}              {Noun}      {Seta / Champiñón}      {}
 \newVocabularyConcept{Aubergine}            {Eggplant}      {Noun}      {Berenjena}             {}
 \newVocabularyConcept{Courgette}            {Zucchini}      {Noun}      {Calabacín}             {}
-\newVocabularyConcept{Pumpkin}              {}              {Noun}      {Calabaza}              {Redonda y naranja}
+\newVocabularyConcept{Pumpkin}              {}              {Noun}      {Calabaza}              {Variedad redonda y naranja}
 \newVocabularyConcept{Squash}               {}              {Noun}      {Calabaza}              {Cualquier variedad}
 \newVocabularyConcept{Asparagus}            {}              {Noun}      {Espárrago}             {}
 \newVocabularyConcept{Leek}                 {}              {Noun}      {Puerro}                {}
 \newVocabularyConcept{Celery}               {}              {Noun}      {Apio}                  {}
 \newVocabularyConcept{Radish}               {}              {Noun}      {Rábano}                {}
-\newVocabularyConcept{Beetroot}             {}              {Noun}      {Remolacha}             {}
+\newVocabularyConcept{Horseradish}          {}              {Noun}      {Rábano picante}        {}
+\newVocabularyConcept{Beetroot}             {Beet}          {Noun}      {Remolacha}             {}
 \newVocabularyConcept{Cauliflower}          {}              {Noun}      {Coliflor}              {}
 \newVocabularyConcept{Brussels sprout}      {}              {Noun}      {Coles de Bruselas}     {}
 \newVocabularyConcept{Artichoke}            {}              {Noun}      {Alcachofa}             {}
-\newVocabularyConcept{Corn}                 {}              {Noun}      {Maíz}                  {}
-\newVocabularyConcept{Leek}                 {}              {Noun}      {Puerro}                {}
-\newVocabularyConcept{Artichoke}            {}              {Noun}      {Alcachofa}             {}
+\newVocabularyConcept{Corn / Maize}         {}              {Noun}      {Maíz}                  {}
 \newVocabularyConcept{Turnip}               {}              {Noun}      {Nabo}                  {}
 \newVocabularyConcept{Parsnip}              {}              {Noun}      {Chirivía}              {}
 \newVocabularyConcept{Rhubarb}              {}              {Noun}      {Ruibarbo}              {}
 \newVocabularyConcept{Fennel}               {}              {Noun}      {Hinojo}                {}
-\newVocabularyConcept{Chicory}              {}              {Noun}      {Achicoria}             {}
+\newVocabularyConcept{Chicory}              {}              {Noun}      {Escarola / Achicoria}  {}
 \newVocabularyConcept{Endive}               {}              {Noun}      {Endibia}               {}
 \newVocabularyConcept{Watercress}           {}              {Noun}      {Berros}                {}
 \newVocabularyConcept{Seaweed}              {}              {Noun}      {Alga marina}           {}
 \newVocabularyConcept{Bean}                 {}              {Noun}      {Judía / Frijol}        {}
 \newVocabularyConcept{Pea}                  {}              {Noun}      {Guisante}              {}
 \newVocabularyConcept{Lentil}               {}              {Noun}      {Lenteja}               {}
+\newVocabularyConcept{Chard / Swiss chard}  {}              {Noun}      {Acelga}                {}
+\newVocabularyConcept{Cabbage}              {}              {Noun}      {Col / Repollo}         {}
+\newVocabularyConcept{Cassava}              {}              {Noun}      {Yuca}                  {}
+\newVocabularyConcept{Jenjibre}             {}              {Noun}      {Ginger}                {}
+\newVocabularyConcept{Ajo}                  {}              {Noun}      {Garlic}                {}
