--- a/src/sections/Food.tex
+++ b/src/sections/Food.tex
@@ -6,6 +6,6 @@
 %\PrintTableConcepts{data/dataFood/dataFood_Fish}{Fishes}
 %\PrintTableConcepts{data/dataFood/dataFood_Grain}{Grains}
 %\PrintTableConcepts{data/dataFood/dataFood_Spice}{Spices}
-%\PrintTableConcepts{data/dataFood/dataFood_Dairy}{Dairy}
+\PrintTableConcepts{data/dataFood/dataFood_Dairy}{Dairy}
 %\PrintTableConcepts{data/dataFood/dataFood_Drink}{Drinks}
 %\PrintTableConcepts{data/dataFood/dataFood_Dessert}{Desserts}
