Irregular verb table and data have been added

--- a/src/aux/Preamble.tex
+++ b/src/aux/Preamble.tex
@@ -42,6 +42,7 @@
 
 \usepackage{float} % Para [H] en tablas
 \input{tables/table_concepts}
+\input{tables/Table_IrregularVerbs.tex}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
