updated Irregular Verb list

--- a/src/data/data_IrregularVerbs/Data_IrregularVerbs_VerbList.tex
+++ b/src/data/data_IrregularVerbs/Data_IrregularVerbs_VerbList.tex
@@ -2,7 +2,7 @@
 \newIrregularVerb{Arise}{}              {Arose}{}	            {Arisen}{}              {Surgir / Presentarse}{}
 \newIrregularVerb{Awake}{}              {Awoke}{}	            {Awoken}{}              {Despertarse}{}
 \newIrregularVerb{Be}{}                 {Was/Were}{}	        {Been}{}                {Ser / Estar}{}
-\newIrregularVerb{Bear}{}               {Bore}{}	            {Born(e)}{}             {Aguantar / Resistir}{}
+\newIrregularVerb{Bear}{}               {Bore}{}	            {Born/Borne}{}          {Aguantar / Resistir}{}
 \newIrregularVerb{Beat}{}	            {Beat}{}	            {Beaten}{}              {Golpear / Vencer}{}
 \newIrregularVerb{Become}{}	            {Became}{}	            {Become}{}              {Llegar a ser / Convertirse}{}
 \newIrregularVerb{Begin}{}	            {Began}{}	            {Begun}{}               {Comenzar}{}
@@ -59,78 +59,78 @@
 \newIrregularVerb{Hurt}{}	            {Hurt}{}	            {Hurt}{}                {Doler / Lastimar}{}
 \newIrregularVerb{Keep}{}	            {Kept}{}	            {Kept}{}                {Conservar / Guardar}{}
 \newIrregularVerb{Kneel}{}	            {Knelt}{}	            {Knelt}{}               {Arrodillarse}{}
-\newIrregularVerb{Know}{}	            {Knew}{}	            {Known}{}               {}{}
-\newIrregularVerb{Lay}{}	            {Laid}{}	            {Laid}{}                {}{}
-\newIrregularVerb{Lead}{}	            {Led}{}	                {Led}{}                 {}{}
-\newIrregularVerb{Lean}{}	            {Leant/Leaned}{}	    {Leant/Leaned}{}        {}{}
-\newIrregularVerb{Learn}{}	            {Learnt/Learned}{}	    {Learnt/Learned}{}      {}{}
-\newIrregularVerb{Leave}{}	            {Left}{}	            {Left}{}                {}{}
-\newIrregularVerb{Lend}{}	            {Lent}{}	            {Lent}{}                {}{}
-\newIrregularVerb{Lie}{}	            {Lay}{}	                {Lain}{}                {In bed}{}
+\newIrregularVerb{Know}{}	            {Knew}{}	            {Known}{}               {Saber / Conocer}{}
+\newIrregularVerb{Lay}{}	            {Laid}{}	            {Laid}{}                {Poner / Extender}{}
+\newIrregularVerb{Lead}{}	            {Led}{}	                {Led}{}                 {Guiar / Dirigir}{}
+\newIrregularVerb{Lean}{}	            {Leant/Leaned}{}	    {Leant/Leaned}{}        {Apoyarse / Inclinarse}{}
+\newIrregularVerb{Learn}{}	            {Learnt/Learned}{}	    {Learnt/Learned}{}      {Aprender}{}
+\newIrregularVerb{Leave}{}	            {Left}{}	            {Left}{}                {Irse / Marcharse}{}
+\newIrregularVerb{Lend}{}	            {Lent}{}	            {Lent}{}                {Prestar}{}
+\newIrregularVerb{Lie}{}	            {Lay}{}	                {Lain}{}                {Tumbarse / Echarse}{}
 \newIrregularVerb{Lie}{}	            {Lied}{}	            {Lied}{}                {Mentir}{}
-\newIrregularVerb{Light}{}	            {Lit/Lighted}{}	        {Lit/Lighted}{}         {}{}
-\newIrregularVerb{Lose}{}	            {Lost}{}	            {Lost}{}                {}{}
-\newIrregularVerb{Make}{}	            {Made}{}	            {Made}{}                {}{}
-\newIrregularVerb{Mean}{}	            {Meant}{}	            {Meant}{}               {}{}
-\newIrregularVerb{Meet}{}	            {Met}{}	                {Met}{}                 {}{}
-\newIrregularVerb{Mow}{}	            {Mowed}{}	            {Mown/Mowed}{}          {}{}
-\newIrregularVerb{Overtake}{}	        {Overtook}{}	        {Overtaken}{}           {}{}
-\newIrregularVerb{Pay}{}	            {Paid}{}	            {Paid}{}                {}{}
-\newIrregularVerb{Put}{}	            {Put}{}	                {Put}{}                 {}{}
-\newIrregularVerb{Read}{}	            {Read}{}	            {Read}{}                {}{}
-\newIrregularVerb{Ride}{}	            {Rode}{}	            {Ridden}{}              {}{}
-\newIrregularVerb{Ring}{}	            {Rang}{}	            {Rung}{}                {}{}
-\newIrregularVerb{Rise}{}	            {Rose}{}	            {Risen}{}               {}{}
-\newIrregularVerb{Run}{}	            {Ran}{}	                {Run}{}                 {}{}
-\newIrregularVerb{Saw}{}	            {Sawed}{}	            {Sawn/Sawed}{}          {}{}
-\newIrregularVerb{Say}{}	            {Said}{}	            {Said}{}                {}{}
-\newIrregularVerb{See}{}	            {Saw}{}	                {Seen}{}                {}{}
-\newIrregularVerb{Sell}{}	            {Sold}{}	            {Sold}{}                {}{}
-\newIrregularVerb{Send}{}	            {Sent}{}	            {Sent}{}                {}{}
-\newIrregularVerb{Set}{}	            {Set}{}	                {Set}{}                 {}{}
-\newIrregularVerb{Sew}{}	            {Sewed}{}	            {Sewn/Sewed}{}          {}{}
-\newIrregularVerb{Shake}{}	            {Shook}{}	            {Shaken}{}              {}{}
-\newIrregularVerb{Shed}{}	            {Shed}{}	            {Shed}{}                {}{}
-\newIrregularVerb{Shine}{}	            {Shone}{}	            {Shone}{}               {}{}
-\newIrregularVerb{Shoot}{}	            {Shot}{}	            {Shot}{}                {}{}
-\newIrregularVerb{Show}{}	            {Showed}{}	            {Shown}{}               {}{}
-\newIrregularVerb{Shrink}{}	            {Shrank}{}	            {Shrunk}{}              {}{}
-\newIrregularVerb{Shut}{}	            {Shut}{}	            {Shut}{}                {}{}
-\newIrregularVerb{Sing}{}	            {Sang}{}	            {Sung}{}                {}{}
-\newIrregularVerb{Sink}{}	            {Sank}{}	            {Sunk}{}                {}{}
-\newIrregularVerb{Sit}{}	            {Sat}{}	                {Sat}{}                 {}{}
-\newIrregularVerb{Sleep}{}	            {Slept}{}	            {Slept}{}               {}{}
-\newIrregularVerb{Slide}{}	            {Slid}{}	            {Slid}{}                {}{}
-\newIrregularVerb{Smell}{}	            {Smelt}{}	            {Smelt}{}               {}{}
-\newIrregularVerb{Sow}{}	            {Sowed}{}	            {Sown/Sowed}{}          {}{}
-\newIrregularVerb{Speak}{}	            {Spoke}{}	            {Spoken}{}              {}{}
-\newIrregularVerb{Spell}{}	            {Spelt/Spelled}{}	    {Spelt/Spelled}{}       {}{}
-\newIrregularVerb{Spend}{}	            {Spent}{}	            {Spent}{}               {}{}
-\newIrregularVerb{Spill}{}	            {Spilt/Spilled}{}	    {Spilt/Spilled}{}       {}{}
-\newIrregularVerb{Spin}{}	            {Spun}{}	            {Spun}{}                {}{}
-\newIrregularVerb{Spit}{}	            {Spat}{}	            {Spat}{}                {}{}
-\newIrregularVerb{Spread}{}	            {Spread}{}	            {Spread}{}              {}{}
-\newIrregularVerb{Stand}{}	            {Stood}{}	            {Stood}{}               {}{}
-\newIrregularVerb{Steal}{}	            {Stole}{}	            {Stolen}{}              {}{}
-\newIrregularVerb{Stick}{}	            {Stuck}{}	            {Stuck}{}               {}{}
-\newIrregularVerb{Sting}{}	            {Stung}{}	            {Stung}{}               {}{}
-\newIrregularVerb{Stink}{}	            {Stank}{}	            {Stunk}{}               {}{}
-\newIrregularVerb{Strike}{}	            {Struck}{}	            {Struck}{}              {}{}
-\newIrregularVerb{Swear}{}	            {Swore}{}	            {Sworn}{}               {}{}
-\newIrregularVerb{Sweep}{}	            {Swept}{}	            {Swept}{}               {}{}
-\newIrregularVerb{Swell}{}	            {Swelled}{}	            {Swollen/Swelled}{}     {}{}
-\newIrregularVerb{Swim}{}	            {Swam}{}	            {Swum}{}                {}{}
-\newIrregularVerb{Swing}{}	            {Swung}{}	            {Swung}{}               {}{}
-\newIrregularVerb{Take}{}	            {Took}{}	            {Taken}{}               {}{}
-\newIrregularVerb{Teach}{}	            {Taught}{}	            {Taught}{}              {}{}
-\newIrregularVerb{Tear}{}	            {Tore}{}	            {Torn}{}                {}{}
-\newIrregularVerb{Tell}{}	            {Told}{}	            {Told}{}                {}{}
-\newIrregularVerb{Think}{}	            {Thought}{}	            {Thought}{}             {}{}
-\newIrregularVerb{Throw}{}	            {Threw}{}	            {Thrown}{}              {}{}
-\newIrregularVerb{Understand}{}	        {Understood}{}	        {Understood}{}          {}{}
-\newIrregularVerb{Wake}{}	            {Woke}{}	            {Woken}{}               {}{}
-\newIrregularVerb{Wear}{}	            {Wore}{}	            {Worn}{}                {}{}
-\newIrregularVerb{Weep}{}	            {Wept}{}	            {Wept}{}                {}{}
-\newIrregularVerb{Win}{}	            {Won}{}	                {Won}{}                 {}{}
-\newIrregularVerb{Wind}{}	            {Wound}{}	            {Wound}{}               {}{}
-\newIrregularVerb{Write}{}	            {Wrote}{}	            {Written}{}             {}{}
+\newIrregularVerb{Light}{}	            {Lit/Lighted}{}	        {Lit/Lighted}{}         {Iluminar / Encender}{}
+\newIrregularVerb{Lose}{}	            {Lost}{}	            {Lost}{}                {Perder}{}
+\newIrregularVerb{Make}{}	            {Made}{}	            {Made}{}                {Hacer}{}
+\newIrregularVerb{Mean}{}	            {Meant}{}	            {Meant}{}               {Significar}{}
+\newIrregularVerb{Meet}{}	            {Met}{}	                {Met}{}                 {Conocer / Encontrar}{}
+\newIrregularVerb{Mow}{}	            {Mowed}{}	            {Mown/Mowed}{}          {Segar / Cortar el cesped}{}
+\newIrregularVerb{Overtake}{}	        {Overtook}{}	        {Overtaken}{}           {Adelantar / Sobrepasar}{}
+\newIrregularVerb{Pay}{}	            {Paid}{}	            {Paid}{}                {Pagar}{}
+\newIrregularVerb{Put}{}	            {Put}{}	                {Put}{}                 {Poner}{}
+\newIrregularVerb{Read}{}	            {Read}{}	            {Read}{}                {Leer}{}
+\newIrregularVerb{Ride}{}	            {Rode}{}	            {Ridden}{}              {Conducir}{Vehículos a horcajadas}
+\newIrregularVerb{Ring}{}	            {Rang}{}	            {Rung}{}                {Llamar por telefono / Sonar una campana}{}
+\newIrregularVerb{Rise}{}	            {Rose}{}	            {Risen}{}               {Subir / Aumentar / Levantarse}{}
+\newIrregularVerb{Run}{}	            {Ran}{}	                {Run}{}                 {Correr}{}
+\newIrregularVerb{Saw}{}	            {Sawed}{}	            {Sawn/Sawed}{}          {Serrar}{}
+\newIrregularVerb{Say}{}	            {Said}{}	            {Said}{}                {Decir}{}
+\newIrregularVerb{See}{}	            {Saw}{}	                {Seen}{}                {Ver}{}
+\newIrregularVerb{Sell}{}	            {Sold}{}	            {Sold}{}                {Vender}{}
+\newIrregularVerb{Send}{}	            {Sent}{}	            {Sent}{}                {Enviar}{}
+\newIrregularVerb{Set}{}	            {Set}{}	                {Set}{}                 {Poner / Colocar}{}
+\newIrregularVerb{Sew}{}	            {Sewed}{}	            {Sewn/Sewed}{}          {Coser}{}
+\newIrregularVerb{Shake}{}	            {Shook}{}	            {Shaken}{}              {Agitar / Sacudir}{}
+\newIrregularVerb{Shed}{}	            {Shed}{}	            {Shed}{}                {Mudar de piel}{}
+\newIrregularVerb{Shine}{}	            {Shone}{}	            {Shone}{}               {Brillar / Alumbrar}{}
+\newIrregularVerb{Shoot}{}	            {Shot}{}	            {Shot}{}                {Disparar}{}
+\newIrregularVerb{Show}{}	            {Showed}{}	            {Shown}{}               {Mostrar}{}
+\newIrregularVerb{Shrink}{}	            {Shrank}{}	            {Shrunk}{}              {Encoger / Reducir}{}
+\newIrregularVerb{Shut}{}	            {Shut}{}	            {Shut}{}                {Cerrar}{}
+\newIrregularVerb{Sing}{}	            {Sang}{}	            {Sung}{}                {Cantar}{}
+\newIrregularVerb{Sink}{}	            {Sank}{}	            {Sunk}{}                {Hundir / Hundirse}{}
+\newIrregularVerb{Sit}{}	            {Sat}{}	                {Sat}{}                 {Sentarse}{}
+\newIrregularVerb{Sleep}{}	            {Slept}{}	            {Slept}{}               {Dormir}{}
+\newIrregularVerb{Slide}{}	            {Slid}{}	            {Slid}{}                {Deslizar / resbalar}{}
+\newIrregularVerb{Smell}{}	            {Smelt}{}	            {Smelt}{}               {Oler}{Emitir olor o percibirlo}
+\newIrregularVerb{Sow}{}	            {Sowed}{}	            {Sown/Sowed}{}          {Sembrar}{}
+\newIrregularVerb{Speak}{}	            {Spoke}{}	            {Spoken}{}              {Hablar}{}
+\newIrregularVerb{Spell}{}	            {Spelt/Spelled}{}	    {Spelt/Spelled}{}       {Deletrear / Escribir}{}
+\newIrregularVerb{Spend}{}	            {Spent}{}	            {Spent}{}               {Gastar}{}
+\newIrregularVerb{Spill}{}	            {Spilt/Spilled}{}	    {Spilt/Spilled}{}       {Derramar / Verter}{}
+\newIrregularVerb{Spin}{}	            {Spun}{}	            {Spun}{}                {Girar}{}
+\newIrregularVerb{Spit}{}	            {Spat}{}	            {Spat}{}                {Escupir}{}
+\newIrregularVerb{Spread}{}	            {Spread}{}	            {Spread}{}              {Extender}{}
+\newIrregularVerb{Stand}{}	            {Stood}{}	            {Stood}{}               {Ponerse de pie}{}
+\newIrregularVerb{Steal}{}	            {Stole}{}	            {Stolen}{}              {robar}{}
+\newIrregularVerb{Stick}{}	            {Stuck}{}	            {Stuck}{}               {Pegar}{}
+\newIrregularVerb{Sting}{}	            {Stung}{}	            {Stung}{}               {Picar}{}
+\newIrregularVerb{Stink}{}	            {Stank}{}	            {Stunk}{}               {Apestar}{}
+\newIrregularVerb{Strike}{}	            {Struck}{}	            {Struck}{}              {Golpear}{}
+\newIrregularVerb{Swear}{}	            {Swore}{}	            {Sworn}{}               {Jurar}{}
+\newIrregularVerb{Sweep}{}	            {Swept}{}	            {Swept}{}               {Barrer}{}
+\newIrregularVerb{Swell}{}	            {Swelled}{}	            {Swollen/Swelled}{}     {Hincharse, Aumentar}{}
+\newIrregularVerb{Swim}{}	            {Swam}{}	            {Swum}{}                {Nadar}{}
+\newIrregularVerb{Swing}{}	            {Swung}{}	            {Swung}{}               {Balancearse}{}
+\newIrregularVerb{Take}{}	            {Took}{}	            {Taken}{}               {Tomar / Coger}{}
+\newIrregularVerb{Teach}{}	            {Taught}{}	            {Taught}{}              {Enseñar}{}
+\newIrregularVerb{Tear}{}	            {Tore}{}	            {Torn}{}                {Rasgar}{}
+\newIrregularVerb{Tell}{}	            {Told}{}	            {Told}{}                {Decir / Contar}{}
+\newIrregularVerb{Think}{}	            {Thought}{}	            {Thought}{}             {Pensar}{}
+\newIrregularVerb{Throw}{}	            {Threw}{}	            {Thrown}{}              {Tirar / Lanzar}{}
+\newIrregularVerb{Understand}{}	        {Understood}{}	        {Understood}{}          {Entender}{}
+\newIrregularVerb{Wake}{}	            {Woke}{}	            {Woken}{}               {Ponerse / Llevar puerto}{}
+\newIrregularVerb{Wear}{}	            {Wore}{}	            {Worn}{}                {Despertar / Despertarse}{}
+\newIrregularVerb{Weep}{}	            {Wept}{}	            {Wept}{}                {Llorar}{}
+\newIrregularVerb{Win}{}	            {Won}{}	                {Won}{}                 {Ganar}{}
+\newIrregularVerb{Wind}{}	            {Wound}{}	            {Wound}{}               {Enrollar}{}
+\newIrregularVerb{Write}{}	            {Wrote}{}	            {Written}{}             {Escribir}{}
