--- a/src/sections/IrregularVerbs.tex
+++ b/src/sections/IrregularVerbs.tex
@@ -1,3 +1,4 @@
 \section{Irregular Verbs}
+\label{sec:IrregularVerbs}
 
 \PrintIrregularVerbs{data/data_IrregularVerbs/data_IrregularVerbs_verbList}{Irregular Verbs}
