--- a/src/sections/Food.tex
+++ b/src/sections/Food.tex
@@ -1,11 +1,12 @@
 \section{Food}
+\label{sec:Food}
 
-\PrintTableConcepts{data/dataFood/dataFood_Vegetable}{Vegetables}
-%\PrintTableConcepts{data/dataFood/dataFood_Fruit}{Fruits}
-%\PrintTableConcepts{data/dataFood/dataFood_Meat}{Meat}
-%\PrintTableConcepts{data/dataFood/dataFood_Fish}{Fishes}
-%\PrintTableConcepts{data/dataFood/dataFood_Grain}{Grains}
-%\PrintTableConcepts{data/dataFood/dataFood_Spice}{Spices}
-\PrintTableConcepts{data/dataFood/dataFood_Dairy}{Dairy}
-%\PrintTableConcepts{data/dataFood/dataFood_Drink}{Drinks}
-%\PrintTableConcepts{data/dataFood/dataFood_Dessert}{Desserts}
+\PrintTableConcepts{data/data_Food/data_Food_Vegetable}{Vegetables}
+%\PrintTableConcepts{data/data_Food/data_Food_Fruit}{Fruits}
+%\PrintTableConcepts{data/data_Food/data_Food_Meat}{Meat}
+%\PrintTableConcepts{data/data_Food/data_Food_Fish}{Fishes}
+%\PrintTableConcepts{data/data_Food/data_Food_Grain}{Grains}
+%\PrintTableConcepts{data/data_Food/data_Food_Spice}{Spices}
+\PrintTableConcepts{data/data_Food/data_Food_Dairy}{Dairy}
+%\PrintTableConcepts{data/data_Food/data_Food_Drink}{Drinks}
+%\PrintTableConcepts{data/data_Food/data_Food_Dessert}{Desserts}
